# bulk_server

./: .gitignore  CMakeLists.txt  README.md
server/: classTest.hpp  server.hpp  session.hpp
src/: controlsData.cpp  main.cpp
src/includes/: controlsData.hpp  procesData.hpp
src/models/: procesData.cpp
